fixed text formatting and layout issues

--- a/homepage/static/styles.css
+++ b/homepage/static/styles.css
@@ -11,26 +11,60 @@
 
 /* Shaded boxes */
 #topbox {
+    position: relative;
     margin: 0;
+    padding: 0;
     top: 0;
     background-color: hsla(0, 0%, 39%, 1);
-    height: 8em;
+    min-height: 8em;
+    width: 100%;
+    text-align: center;
 }
+#topbox p {
+    text-align: center;
+    vertical-align: middle;
+    /*margin: auto;*/
+    /*padding: 5px;*/
+    max-width: 35em;
+    margin: 0 auto;
+    padding-bottom: 1em;
+    color: hsl(0, 0%, 94%);
+}
+
+/* Text */
+#topbox h1 {
+    padding-top: 1%;
+    color: hsl(0, 0%, 94%);
+    top: 1em;
+    text-align: center;
+}
+
+/* Don't expand text too far on big screens */
+/*@media screen and (min-width: 800px) {
+    #topbox p {
+        max-width: 800px;
+        margin: 0 auto;
+    }
+}*/
 
 #midbox {
     position: relative;
-    height: 8em;
+    overflow: auto;
+    min-height: 8em;
+    padding: 10px;
     background-color: hsla(0, 0%, 66%, 0.9);
     color: #fff;
 }
 
 #midbox h3, #midbox p {
     margin: 0;
-    padding-top: 20px;
     padding-left: 20px;
     width: 70%;
     text-align: left;
     float: left;
+}
+#midbox p {
+    padding-top: 20px;
 }
 
 #midbox a {
@@ -53,21 +87,6 @@
     margin: auto;
     padding: 0;
     object-fit: cover;
-}
-
-
-/* Text */
-#topbox h1 {
-    padding-top: 1%;
-    color: hsl(0, 0%, 94%);
-    top: 1em;
-    text-align: center;
-}
-#topbox p {
-    margin: 0;
-    position: relative;
-    color: hsl(0, 0%, 94%);
-    text-align: center;
 }
 
 
